more work on tutorial

--- a/tutorial/Makefile
+++ b/tutorial/Makefile
@@ -1,7 +1,7 @@
 # To get pandoc, use
 #   cabal install -fhighlighting pandoc
 
-default : diagrams-tutorial.html
+default : DiagramsTutorial.html
 
 %.html : %.lhs
 	pandoc -f markdown+lhs -t html+lhs -s -o $@ $<
