gallery now works, with auto-built examples

--- a/web/Makefile
+++ b/web/Makefile
@@ -1,11 +1,14 @@
 hakyll : hakyll.hs
 	ghc --make hakyll.hs
 
-preview : hakyll
+images :
+	make -C gallery
+
+preview : hakyll images
 	./hakyll rebuild
 	./hakyll preview
 
-deploy : hakyll
+deploy : hakyll images
 	./hakyll rebuild
 	rsync -r _site/* byorgey@projects.haskell.org:/srv/projects/diagrams/
 	ssh byorgey@projects.haskell.org chmod -R o+rX /srv/projects/diagrams/*
