drop the custom reST parser Used to think I needed a custom reST parser which registered a new type of directive block. But it turns out this isn't really necessary.  Can just use a normal literal block, together with a 'class' directive to set the 'classes' attribute on the literal_block node.  This patch converts everything to the new style.

--- a/manual/Makefile
+++ b/manual/Makefile
@@ -9,7 +9,7 @@ xml2html.exe : xml2html.hs Build.hs
 	./xml2html.exe $< $@
 
 %.xml : %.rst
-	./dia-rst2xml.py $< $@
+	rst2xml.py $< $@
 
 %-du.html : %.rst
 	rst2html.py $< $@
@@ -19,8 +19,10 @@ xml2html.exe : xml2html.hs Build.hs
 clean : 
 	rm -f *.exe *.html *.o *.hi *.xml
 
-veryclean : clean
+imgclean :
 	rm -f images/*.png
+
+veryclean : clean imgclean
 
 preview : diagrams-manual.html
 	cp diagrams-manual.{html,rst} ${WEB}
