--- a/web/Makefile
+++ b/web/Makefile
@@ -1,14 +1,14 @@
-hakyll : hakyll.hs
-	ghc --make hakyll.hs
+hakyll.exe : hakyll.hs
+	ghc --make hakyll.hs -o hakyll.exe
 
 images :
 	make -C gallery
 
-preview : hakyll images
-	./hakyll rebuild
-	./hakyll preview
+preview : hakyll.exe images
+	./hakyll.exe rebuild
+	./hakyll.exe preview
 
-deploy : hakyll images
-	./hakyll rebuild
+deploy : hakyll.exe images
+	./hakyll.exe rebuild
 	rsync -r _site/* byorgey@projects.haskell.org:/srv/projects/diagrams/
 	ssh byorgey@projects.haskell.org chmod -R o+rX /srv/projects/diagrams/*
