incorporate user manual into web page

--- a/manual/Makefile
+++ b/manual/Makefile
@@ -30,3 +30,10 @@ preview : diagrams-manual.html
 	cp images/* $(WEB)/images
 	cp icons/* $(WEB)/icons
 	chmod -R go+rX $(WEB)
+
+deploy-web : diagrams-manual.html
+	cp diagrams-manual.{html,rst} ../web/manual
+	cp static/* ../web/manual/static
+	cp images/* ../web/manual/images
+	cp icons/* ../web/manual/icons
+	cp css/* ../web/manual/css
