add --input-encoding=utf8 argument in Makefile to get it to work with newest python

--- a/manual/Makefile
+++ b/manual/Makefile
@@ -12,7 +12,7 @@ build-icons :
 	make -C icons
 
 %.xml : %.rst
-	rst2xml.py $< $@
+	rst2xml.py --input-encoding=utf8 $< $@
 
 .SECONDARY : xml2html.exe diagrams-manual.xml
 
