redesigned gallery, new build process using diagrams-builder, and import some new examples

--- a/web/gallery/Makefile
+++ b/web/gallery/Makefile
@@ -15,5 +15,5 @@ Build.exe : Build.hs
 #	rm -f *~
 #	rm -f *.hi
 
-# NOTE: all the above is commented out because we generate .pngs from
+# NOTE: all the above is commented out because we generate .svgs from
 # hakyll.hs now.
