Fix inclusion of icons in user manual

--- a/manual/Makefile
+++ b/manual/Makefile
@@ -27,7 +27,7 @@ veryclean : clean imgclean
 preview : diagrams-manual.html
 	cp diagrams-manual.{html,rst} $(WEB)
 	cp images/* $(WEB)/images
-	cp icons/* $(WEB)/icons
+	cp icons/*.png $(WEB)/icons
 	chmod -R go+rX $(WEB)
 
 deploy-web : diagrams-manual.html
