include diagrams-builder in .travis.yml, and use rst2xml instead of rst2xml.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ before_install:
   - git clone --quiet git://github.com/diagrams/diagrams-lib.git diagrams/lib
   - git clone --quiet git://github.com/diagrams/diagrams-cairo.git diagrams/cairo
   - git clone --quiet git://github.com/diagrams/diagrams-contrib.git diagrams/contrib
+  - git clone --quiet git://github.com/diagrams/diagrams-builder.git diagrams/builder
   - git clone --quiet git://github.com/diagrams/docutils.git diagrams/docutils
   - cd diagrams
   - cabal install gtk2hs-buildtools shake
-  - cabal install monoid-extras/ dual-tree/ core/ lib/ cairo/ contrib/ docutils/
+  - cabal install monoid-extras/ dual-tree/ core/ lib/ cairo/ contrib/ builder/ docutils/
   - cd ..
 
 install: true
