--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 
 install: 
   - cd diagrams
-  - cabal install gtk2hs-buildtools shake
+  - cabal install gtk2hs-buildtools shake hakyll
   - cabal install monoid-extras/ dual-tree/ core/ lib/ cairo/ contrib/ builder/ docutils/
   - cd ..
 
