--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,12 @@ before_install:
 
 install: 
   - cd diagrams
+  - sudo ghc-pkg --global unregister cgi
+  - sudo ghc-pkg --global unregister HTTP
+  - sudo ghc-pkg --global unregister network
+  - sudo ghc-pkg --global unregister regex-compat
+  - sudo ghc-pkg --global unregister regex-posix
+  - cabal install --force-reinstalls transformers-0.3.0.0 mtl-2.1.1 parsec-3.1.2
   - cabal install gtk2hs-buildtools shake hakyll
   - cabal install monoid-extras/ dual-tree/ core/ lib/ cairo/ contrib/ builder/ docutils/
   - cd ..
