stop spamming diagrams-discuss with travis failure messages

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_script: ghc --make Shake
 script: ./Shake
 
 notifications:
+  email: false
   irc:
     channels:
       - "irc.freenode.org#diagrams"
