--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ history
 TAGS
 _cache
 _site
-web/manual
+web/doc
 web/gallery/images
 .make
 .shake.database
@@ -21,6 +21,5 @@ Shake
 *.aux
 *.log
 HCAR/*.pdf
-manual/icons/*.png
-manual/icons/*.png
+doc/icons/*.png
 HCAR/html
