--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,29 @@
 language: haskell
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq libgtk-3-dev libcairo2-dev python-docutils
-  - git clone --quiet git://github.com/diagrams/diagrams-core.git diagrams/core
-  - git clone --quiet git://github.com/diagrams/diagrams-lib.git diagrams/lib
-  - git clone --quiet git://github.com/diagrams/diagrams-cairo.git diagrams/cairo
-  - git clone --quiet git://github.com/diagrams/diagrams-contrib.git diagrams/contrib
-  - git clone --quiet git://github.com/diagrams/diagrams-builder.git diagrams/builder
-  - git clone --quiet git://github.com/diagrams/docutils.git diagrams/docutils
 
-install:
-  - cd diagrams
-  - sudo ghc-pkg --global unregister cgi
-  - sudo ghc-pkg --global unregister HTTP
-  - sudo ghc-pkg --global unregister network
-  - sudo ghc-pkg --global unregister regex-compat
-  - sudo ghc-pkg --global unregister regex-posix
-  - cabal install --force-reinstalls transformers-0.3.0.0 mtl-2.1.1 parsec-3.1.2
-  - cabal install gtk2hs-buildtools shake hakyll
-  - cabal install core/ lib/ cairo/ contrib/ builder/ docutils/ SVGFonts
-  - cd ..
+env:
+  matrix:
+    - HPVER=2012.4.0.0
+    - HPVER=2013.2.0.0
+    - GHCVER=7.4.2
+    - GHCVER=7.6.3
+    - GHCVER=head
+  global:
+    - CABALVER=1.16
+    - UBUNTU_PKGS="libgtk3-dev libcairo2-dev python-docutils"
+    - EXTRA_DEPS_PRE="gtk2hs-buildtools"
+    - HEAD_DEPS="diagrams-core diagrams-lib diagrams-cairo diagrams-contrib diagrams-builder docutils"
+    - EXTRA_DEPS="SVGFonts shake hakyll"
+
+matrix:
+  allow_failures:
+    - env: GHCVER=head
+
+before_install:
+  - git clone http://github.com/diagrams/diagrams-travis travis
+  - source travis/scripts/set_env.sh
+  - ./travis/scripts/before_install.sh
+
+install: ./travis/scripts/install.sh
 
 before_script: ghc --make Shake
 
