--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
     - EXTRA_DEPS_PRE="gtk2hs-buildtools"
     - HEAD_DEPS="diagrams-core diagrams-lib diagrams-cairo diagrams-contrib diagrams-builder docutils"
     - EXTRA_DEPS="SVGFonts shake hakyll safe"
-    - secure: "GvSd0Muvr60TAaiBKHuGwFcuGAy4j2gaIV0IK4f9O8rJNyJSRdEpwW9i1MUvY7bSLT0pIx9A7WHHjDPUrtyxRs9uHQ3DcQG8ZF2Nmwf0Mgdd5ehdYcO6EVWRDJsBwk6JqloD7t3tiKJTE7APVbzLiuxxskpddiOb1+q2NQPsSuc="
+#    - secure: "GvSd0Muvr60TAaiBKHuGwFcuGAy4j2gaIV0IK4f9O8rJNyJSRdEpwW9i1MUvY7bSLT0pIx9A7WHHjDPUrtyxRs9uHQ3DcQG8ZF2Nmwf0Mgdd5ehdYcO6EVWRDJsBwk6JqloD7t3tiKJTE7APVbzLiuxxskpddiOb1+q2NQPsSuc="
 
 matrix:
   allow_failures:
@@ -30,10 +30,10 @@ before_script: ghc --make Shake -threaded
 
 script: ./Shake +RTS -N2 -RTS buildh
 
-after_success:
-  - export RSYNC_PASSWORD=$ENIAC_PASSWORD
-  - ssh-keyscan eniac.seas.upenn.edu >> ~/.ssh/known_hosts
-  - rsync -r web/_site/* byorgey@eniac.seas.upenn.edu:public_html/diagrams-doc-HEAD/
+# after_success:
+#   - $ENIAC_PASSWORD
+#   - ssh-keyscan eniac.seas.upenn.edu >> ~/.ssh/known_hosts
+#   - rsync -r web/_site/* byorgey@eniac.seas.upenn.edu:public_html/diagrams-doc-HEAD/
 
 notifications:
   email: false
