more boring files

--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,5 @@ HCAR/html
 *.snm
 talks/2013-nyhaskell/13-11-25-nyhaskell-diagrams.pdf
 talks/2013-nyhaskell/13-11-25-nyhaskell-diagrams.tex
-
+.diagrams_cache
+talks/*/diagrams
