some LGM talk files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ talks/2013-nyhaskell/13-11-25-nyhaskell-diagrams.pdf
 talks/2013-nyhaskell/13-11-25-nyhaskell-diagrams.tex
 .diagrams_cache
 talks/*/diagrams
+talks/2014-LGM/LGM.pdf
+talks/2014-LGM/LGM.tex
