--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,12 @@ HCAR/html
 *.toc
 *.vrb
 *.snm
+*.errors
 talks/2013-nyhaskell/13-11-25-nyhaskell-diagrams.pdf
 talks/2013-nyhaskell/13-11-25-nyhaskell-diagrams.tex
 .diagrams_cache
 talks/*/diagrams
 talks/2014-LGM/LGM.pdf
 talks/2014-LGM/LGM.tex
+talks/2014-LGM/scripts/RepoRainbow
+talks/2014-LGM/scripts/RepoRainbow.pdf
