--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ HCAR/html
 *.toc
 *.vrb
 *.snm
+*.ptb
 *.errors
 talks/2013-nyhaskell/13-11-25-nyhaskell-diagrams.pdf
 talks/2013-nyhaskell/13-11-25-nyhaskell-diagrams.tex
