--- a/diagrams-doc.cabal
+++ b/diagrams-doc.cabal
@@ -1,8 +1,20 @@
 Name:           diagrams-doc
-Version:        1.2
+Version:        1.3
 License:        BSD3
 Cabal-Version:  >=1.10
 Build-type:     Simple
 
-library
-    Default-language: Haskell2010
+executable diagrams-doc
+  main-is: Shake.hs
+  hs-source-dirs: .
+  default-language: Haskell2010
+  build-depends: base >= 4 && < 5,
+                 diagrams-builder,
+                 shake,
+                 hakyll,
+                 docutils,
+                 safe,
+                 cmdargs,
+                 directory,
+                 process,
+                 parallel
