some boring files

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ talks/2014-LGM/scripts/RepoRainbow
 talks/2014-LGM/scripts/RepoRainbow.pdf
 talks/2015-FARM/abstract.pdf
 talks/2015-FARM/abstract.tex
+talks/2015-FARM/sources
+talks/2015-FARM/sources.zip
