--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ talks/2015-FARM/abstract.pdf
 talks/2015-FARM/abstract.tex
 talks/2015-FARM/sources
 talks/2015-FARM/sources.zip
+talks/2015-FARM/diagrams-FARM-15.tex
+talks/2015-FARM/diagrams-FARM-15.pdf
