--- a/diagrams-doc.cabal
+++ b/diagrams-doc.cabal
@@ -8,13 +8,13 @@ executable diagrams-doc
   main-is: Shake.hs
   hs-source-dirs: .
   default-language: Haskell2010
-  build-depends: base >= 4 && < 5,
-                 diagrams-builder,
-                 shake,
-                 hakyll,
-                 docutils,
-                 safe,
-                 cmdargs,
+  build-depends: base >= 4.8 && < 5,
+                 diagrams-builder >= 0.7.2 && < 0.8,
+                 shake >= 0.15 && < 0.16,
+                 hakyll >= 4.7 && < 4.8,
+                 docutils >= 0.1 && < 0.2,
+                 safe >= 0.3 && < 0.4,
+                 cmdargs >= 0.10 && < 0.11,
                  directory,
                  process,
                  parallel
