--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ talks/2015-FARM/sources
 talks/2015-FARM/sources.zip
 talks/2015-FARM/diagrams-FARM-15.tex
 talks/2015-FARM/diagrams-FARM-15.pdf
+*.tgz
