--- a/diagrams-doc.cabal
+++ b/diagrams-doc.cabal
@@ -4,10 +4,6 @@ License:        BSD3
 Cabal-Version:  >=1.10
 Build-type:     Simple
 
-Flag UseSVG
-  Description: Build the examples using diagrams-svg instead of diagrams-rasterific
-  Default:     False
-
 executable Xml2Html
   main-is:          Xml2Html.hs
   ghc-options:      -main-is Xml2Html
@@ -21,6 +17,8 @@ executable Xml2Html
                   , diagrams-lib == 1.3
                   , hxt
                   , filepath
+                  , diagrams-rasterific
+                  , JuicyPixels
 
                     -- Below packages required by doc/*.rst files, not by Xml2Html.
                   , SVGFonts
@@ -30,16 +28,6 @@ executable Xml2Html
                   , palette
                   , random
                   , lens
-
-  if flag(UseSVG)
-    cpp-options:   -DUSE_SVG
-    build-depends: diagrams-svg
-                 , bytestring
-                 , text
-                 , lucid-svg
-  else
-    build-depends: diagrams-rasterific
-                 , JuicyPixels
 
 executable diagrams-doc
   main-is: Shake.hs
@@ -56,9 +44,6 @@ executable diagrams-doc
                , process
                , parallel
 
-  if flag(UseSVG)
-    cpp-options:   -DUSE_SVG
-
 executable Warning
   main-is:          Warning.hs
   ghc-options:      -main-is Warning
@@ -67,12 +52,7 @@ executable Warning
   build-depends:    base >= 4.8 && < 5
                   , diagrams-core == 1.3.0.4
                   , diagrams-lib == 1.3
-
-  if flag(UseSVG)
-    cpp-options:   -DUSE_SVG
-    build-depends: diagrams-svg
-  else
-    build-depends: diagrams-rasterific
+                  , diagrams-rasterific
 
 executable ToWrite
   main-is:          ToWrite.hs
@@ -83,12 +63,7 @@ executable ToWrite
                   , diagrams-core == 1.3.0.4
                   , diagrams-lib == 1.3
                   , lens
-
-  if flag(UseSVG)
-    cpp-options:   -DUSE_SVG
-    build-depends: diagrams-svg
-  else
-    build-depends: diagrams-rasterific
+                  , diagrams-rasterific
 
 executable Exercises
   main-is:          Exercises.hs
@@ -99,12 +74,7 @@ executable Exercises
                   , diagrams-core == 1.3.0.4
                   , diagrams-lib == 1.3
                   , lens
-
-  if flag(UseSVG)
-    cpp-options:   -DUSE_SVG
-    build-depends: diagrams-svg
-  else
-    build-depends: diagrams-rasterific
+                  , diagrams-rasterific
 
 executable Site
   main-is:          Site.hs
@@ -132,15 +102,8 @@ executable BuildBanner
                   , split
                   , diagrams-builder
                   , diagrams-lib
-  if flag(UseSVG)
-    cpp-options:   -DUSE_SVG
-    build-depends: diagrams-svg
-                 , lucid-svg
-                 , text
-                 , bytestring
-  else
-    build-depends: diagrams-rasterific
-                 , JuicyPixels
+                  , diagrams-rasterific
+                  , JuicyPixels
 
 executable BuildGallery
   main-is:          BuildGallery.hs
@@ -155,12 +118,5 @@ executable BuildGallery
                   , diagrams-builder
                   , diagrams-core == 1.3.0.4
                   , diagrams-lib == 1.3
-  if flag(UseSVG)
-    cpp-options:   -DUSE_SVG
-    build-depends: diagrams-svg
-                 , lucid-svg
-                 , text
-                 , bytestring
-  else
-    build-depends: diagrams-rasterific
-                 , JuicyPixels
+                  , diagrams-rasterific
+                  , JuicyPixels
