--- a/diagrams-doc.cabal
+++ b/diagrams-doc.cabal
@@ -4,6 +4,19 @@ License:        BSD3
 Cabal-Version:  >=1.10
 Build-type:     Simple
 
+library
+  hs-source-dirs:  web/banner
+  exposed-modules: BuildBanner
+  build-depends:    base >= 4.8 && < 5
+                  , containers
+                  , filepath
+                  , cmdargs
+                  , split
+                  , diagrams-builder
+                  , diagrams-lib
+                  , diagrams-rasterific
+                  , JuicyPixels
+
 executable Xml2Html
   main-is:          Xml2Html.hs
   ghc-options:      -main-is Xml2Html
@@ -34,6 +47,7 @@ executable diagrams-doc
   hs-source-dirs: .
   default-language: Haskell2010
   build-depends: base >= 4.8 && < 5
+               , diagrams-doc
                , diagrams-builder >= 0.7.2 && < 0.8
                , shake >= 0.15 && < 0.16
                , hakyll >= 4.7 && < 4.8
@@ -89,21 +103,6 @@ executable Site
                   , pandoc
                   , text
                   , process
-
-executable BuildBanner
-  main-is:          BuildBanner.hs
-  ghc-options:      -main-is BuildBanner
-  hs-source-dirs:   web/banner
-  default-language: Haskell2010
-  build-depends:    base >= 4.8 && < 5
-                  , containers
-                  , filepath
-                  , cmdargs
-                  , split
-                  , diagrams-builder
-                  , diagrams-lib
-                  , diagrams-rasterific
-                  , JuicyPixels
 
 executable BuildGallery
   main-is:          BuildGallery.hs
