--- a/diagrams-doc.cabal
+++ b/diagrams-doc.cabal
@@ -5,8 +5,9 @@ Cabal-Version:  >=1.10
 Build-type:     Simple
 
 library
-  hs-source-dirs:  web/banner
-  exposed-modules: BuildBanner
+  hs-source-dirs:   web/banner, web/gallery
+  exposed-modules:  BuildBanner
+                  , BuildGallery
   build-depends:    base >= 4.8 && < 5
                   , containers
                   , filepath
@@ -103,19 +104,3 @@ executable Site
                   , pandoc
                   , text
                   , process
-
-executable BuildGallery
-  main-is:          BuildGallery.hs
-  ghc-options:      -main-is BuildGallery
-  hs-source-dirs:   web/gallery
-  default-language: Haskell2010
-  build-depends:    base >= 4.8 && < 5
-                  , containers
-                  , filepath
-                  , cmdargs
-                  , split
-                  , diagrams-builder
-                  , diagrams-core == 1.3.0.4
-                  , diagrams-lib == 1.3
-                  , diagrams-rasterific
-                  , JuicyPixels
