--- a/diagrams-doc.cabal
+++ b/diagrams-doc.cabal
@@ -20,8 +20,8 @@ library
                   , JuicyPixels
 
                   , diagrams-builder >= 0.7.2 && < 0.8
-                  , diagrams-core == 1.3.0.4
-                  , diagrams-lib == 1.3
+                  , diagrams-core >= 1.3
+                  , diagrams-lib >= 1.3
                   , docutils >= 0.1 && < 0.2
                   , hxt
 
@@ -34,6 +34,7 @@ library
                   , palette
                   , random
                   , lens
+  default-language: Haskell2010
 
 executable diagrams-doc
   main-is: Shake.hs
@@ -57,8 +58,8 @@ executable Warning
   hs-source-dirs:   doc/icons
   default-language: Haskell2010
   build-depends:    base >= 4.8 && < 5
-                  , diagrams-core == 1.3.0.4
-                  , diagrams-lib == 1.3
+                  , diagrams-core >= 1.3
+                  , diagrams-lib >= 1.3
                   , diagrams-rasterific
 
 executable ToWrite
@@ -67,8 +68,8 @@ executable ToWrite
   hs-source-dirs:   doc/icons
   default-language: Haskell2010
   build-depends:    base >= 4.8 && < 5
-                  , diagrams-core == 1.3.0.4
-                  , diagrams-lib == 1.3
+                  , diagrams-core >= 1.3
+                  , diagrams-lib >= 1.3
                   , lens
                   , diagrams-rasterific
 
@@ -78,8 +79,8 @@ executable Exercises
   hs-source-dirs:   doc/icons
   default-language: Haskell2010
   build-depends:    base >= 4.8 && < 5
-                  , diagrams-core == 1.3.0.4
-                  , diagrams-lib == 1.3
+                  , diagrams-core >= 1.3
+                  , diagrams-lib >= 1.3
                   , lens
                   , diagrams-rasterific
 
