--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ talks/2014-LGM/LGM.pdf
 talks/2014-LGM/LGM.tex
 talks/2014-LGM/scripts/RepoRainbow
 talks/2014-LGM/scripts/RepoRainbow.pdf
+.stack-work
+.shake
