--- a/diagrams-doc.cabal
+++ b/diagrams-doc.cabal
@@ -40,6 +40,7 @@ executable diagrams-doc
   main-is: Shake.hs
   hs-source-dirs: .
   default-language: Haskell2010
+  ghc-options:  -threaded
   build-depends: base >= 4.8 && < 5
                , diagrams-doc
                , diagrams-builder >= 0.7.2 && < 0.8
