--- a/diagrams-doc.cabal
+++ b/diagrams-doc.cabal
@@ -22,7 +22,7 @@ library
                   , diagrams-builder >= 0.7.2 && < 0.9
                   , diagrams-core >= 1.3
                   , diagrams-lib >= 1.3
-                  -- , docutils >= 0.1 && < 0.2
+                  , docutils >= 0.2 && < 0.3
                   , hxt
 
                     -- The below packages are required by the doc/*.rst files
@@ -46,7 +46,7 @@ executable diagrams-doc
                , diagrams-builder >= 0.7.2 && < 0.9
                , shake >= 0.15 && < 0.17
                , hakyll >= 4.7 && < 4.13
-               -- , docutils >= 0.1 && < 0.2
+               , docutils >= 0.2 && < 0.3
                , safe >= 0.3 && < 0.4
                , cmdargs >= 0.10 && < 0.11
                , directory
