--- a/diagrams-doc.cabal
+++ b/diagrams-doc.cabal
@@ -20,8 +20,8 @@ library
                   , JuicyPixels
 
                   , diagrams-builder >= 0.7.2 && < 0.9
-                  , diagrams-core >= 1.3
-                  , diagrams-lib >= 1.3
+                  , diagrams-core >= 1.5 && < 1.6
+                  , diagrams-lib >= 1.4 && < 1.5
                   , docutils >= 0.2 && < 0.3
                   , hxt
 
@@ -44,8 +44,8 @@ executable diagrams-doc
   build-depends: base >= 4.8 && < 5
                , diagrams-doc
                , diagrams-builder >= 0.7.2 && < 0.9
-               , shake >= 0.15 && < 0.17
-               , hakyll >= 4.7 && < 4.13
+               , shake >= 0.15 && < 0.20
+               , hakyll >= 4.7 && < 4.15
                , docutils >= 0.2 && < 0.3
                , safe >= 0.3 && < 0.4
                , cmdargs >= 0.10 && < 0.11
@@ -59,8 +59,8 @@ executable Warning
   hs-source-dirs:   doc/icons
   default-language: Haskell2010
   build-depends:    base >= 4.8 && < 5
-                  , diagrams-core >= 1.3
-                  , diagrams-lib >= 1.3
+                  , diagrams-core >= 1.5 && < 1.6
+                  , diagrams-lib >= 1.4 && < 1.5
                   , diagrams-rasterific
 
 executable ToWrite
@@ -69,8 +69,8 @@ executable ToWrite
   hs-source-dirs:   doc/icons
   default-language: Haskell2010
   build-depends:    base >= 4.8 && < 5
-                  , diagrams-core >= 1.3
-                  , diagrams-lib >= 1.3
+                  , diagrams-core >= 1.5 && < 1.6
+                  , diagrams-lib >= 1.4 && < 1.5
                   , lens
                   , diagrams-rasterific
 
@@ -80,8 +80,8 @@ executable Exercises
   hs-source-dirs:   doc/icons
   default-language: Haskell2010
   build-depends:    base >= 4.8 && < 5
-                  , diagrams-core >= 1.3
-                  , diagrams-lib >= 1.3
+                  , diagrams-core >= 1.5 && < 1.6
+                  , diagrams-lib >= 1.4 && < 1.5
                   , lens
                   , diagrams-rasterific
 
@@ -91,10 +91,10 @@ executable Site
   hs-source-dirs:   web
   default-language: Haskell2010
   build-depends:    base >= 4.8 && < 5
-                  , hakyll >= 4.7 && < 4.13
+                  , hakyll >= 4.7 && < 4.15
                   , containers
                   , filepath
                   , cmdargs
-                  , pandoc >= 2.0 && < 2.3
+                  , pandoc >= 2.0 && < 2.15
                   , text
                   , process
