--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ cabal-dev
 .cabal-sandbox
 cabal.sandbox.config
 dist_*
+dist-*
 history
 TAGS
 _cache
@@ -57,5 +58,6 @@ talks/2015-FARM/diagrams-FARM-15.pdf
 .shake
 
 stack.yaml
+stack.yaml.lock
 
 standalone-sandbox/
